# yoink

./: .dockerignore  .env.example  .gitignore  .taplo.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  PLAN.md  README.md  ROADMAP.md  UX_IMPROVEMENTS.md  compose.dev.yaml  compose.yaml  docker-entrypoint.sh  mise.toml  plan.md
.sqlx/: query-00b40b679449cb1d52d8a3d7027c7af68b1c996d4ff2cdc5d5172fb00e040c23.json  query-097099da92aae8c544608d8fb65f803542547ad094ce21c670d1028401f9a78b.json  query-12b7af02057a941efabe0427d955768dd17690ccd8197a5d84fd7286a816f446.json  query-190883bb62207a5306f987ec4aab5f57af26a765fb11f774cfafe628ef4c1a36.json  query-201256f17584de7e40f1752643cdf9b37375cbfd46e618f8b3c2915b148e83d2.json  query-223028e9d027e4dcb57b5aa710643d813bb36b3ce4a8180015a1866c715efc49.json  query-265e40b179541c7ef426b8e8a59373963dc839a43967a44a319f4134ade34eb8.json  query-26c17c562bd66e767a0ce11816116741ccfde95b53e2b9bd7dd7be621c3c501d.json  query-276b597ff7bd81d5da25998757531ee01ac2702e580cd88be1c61d213477cc30.json  query-2c84fd00b51d65b173162ae70a18533055371183274a4868ba17a755b1693159.json  query-34854daa8bb96188e03c183c8254b3bab92b4f8f31dce4ef45f4df907b6d7cd8.json  query-350669b7195b0511641b74275505cb2820b5b44144003b557bb251add671711e.json  query-3694a9b5a504e158e06c0d87f05bfff50582562344661ed72f1915b06c1713c5.json  query-36e3430c18451fb0f9759d89d0fab273a9791f10ea24a5b3e9245d92123f47a1.json  query-3c48f7c1cc38afefbf8ff29d67b5f3586697751a4381b8fc26e9a316081ef869.json  query-3d9ffa16e3f68d7583ba50a3d68165dcc3ef65203a3133a99e573af28dbdd728.json  query-481840fc3c8742ca53034a513bc0f524a3d4ae4989c83ba6ea4240c52401b589.json  query-492e0bf0dc243c858355955efba136f489386a87ec8c0f88b20ba2384254fd39.json  (+58 more)
.zed/: settings.json
crates/yoink-app/: Cargo.toml
crates/yoink-app/src/: actions.rs  hooks.rs  lib.rs  search_result_keys.rs  shell.rs  styles.rs
crates/yoink-app/src/components/: add_artist_dialog.rs  album_card.rs  auth_credentials_form.rs  badge.rs  breadcrumb.rs  button.rs  card.rs  confirm_dialog.rs  dialog_shell.rs  edit_artist_dialog.rs  error_panel.rs  link_provider_dialog.rs  mod.rs  page_header.rs  page_shell.rs  panel.rs  quality_select.rs  resolve_artist_dialog.rs  select.rs  sidebar.rs  sleeve_badge.rs  toast.rs
crates/yoink-app/src/pages/: album_detail.rs  artist_detail.rs  artists.rs  dashboard.rs  import.rs  library.rs  library_albums.rs  library_tracks.rs  login.rs  merge_albums.rs  mod.rs  not_found.rs  search.rs  settings_security.rs  wanted.rs
crates/yoink-app/src/pages/import/: external.rs  library_scan.rs  mod.rs  server_fns.rs  shared.rs
crates/yoink-client/: Cargo.toml
crates/yoink-client/src/: lib.rs
crates/yoink-server/: Cargo.toml  build.rs
crates/yoink-server/migrations/: 20260227094052_initial_schema.down.sql  20260227094052_initial_schema.up.sql  20260227095517_match_suggestions.down.sql  20260227095517_match_suggestions.up.sql  20260227101915_match_suggestion_preview_fields.down.sql  20260227101915_match_suggestion_preview_fields.up.sql  20260227152726_add_track_version.down.sql  20260227152726_add_track_version.up.sql  20260228230109_add_artist_bio.down.sql  20260228230109_add_artist_bio.up.sql  20260301090256_add_track_artist_and_filepath.down.sql  20260301090256_add_track_artist_and_filepath.up.sql  20260301100030_album_artists.down.sql  20260301100030_album_artists.up.sql  20260301102224_album_artist_credits.down.sql  20260301102224_album_artist_credits.up.sql  20260303120000_artist_monitored_track_flags.down.sql  20260303120000_artist_monitored_track_flags.up.sql  20260307120000_album_track_quality_overrides.down.sql  20260307120000_album_track_quality_overrides.up.sql  20260308110000_add_auth.down.sql  20260308110000_add_auth.up.sql
crates/yoink-server/src/: actions.rs  app_config.rs  config.rs  db.rs  embedded_assets.rs  error.rs  fk_regressions.rs  logging.rs  main.rs  models.rs  redirects.rs  routes.rs  server_context.rs  state.rs  test_helpers.rs  test_support.rs  util.rs
crates/yoink-server/src/actions/: album.rs  artist.rs  download.rs  helpers.rs  library.rs  matching.rs  mod.rs  tests.rs  track.rs
crates/yoink-server/src/api/: import.rs  mod.rs
crates/yoink-server/src/api/models/: album.rs  artist.rs  auth.rs  download.rs  mod.rs  provider.rs  search.rs  track.rs
crates/yoink-server/src/auth/: cookies.rs  middleware.rs  mod.rs  service.rs
crates/yoink-server/src/db/: album_artists.rs  albums.rs  artists.rs  auth.rs  jobs.rs  match_suggestions.rs  mod.rs  provider_links.rs  tracks.rs
crates/yoink-server/src/db/entities/: album.rs  album_artist.rs  album_match_suggestion.rs  album_provider_link.rs  album_type.rs  artist.rs  artist_match_suggestion.rs  artist_provider_link.rs  auth_session.rs  auth_settings.rs  download_job.rs  download_status.rs  match_kind.rs  match_status.rs  mod.rs  provider.rs  quality.rs  root_folder.rs  track.rs  track_artist.rs  track_provider_link.rs  url.rs  wanted_status.rs
crates/yoink-server/src/error/: api_error.rs  app_error.rs
crates/yoink-server/src/providers/: mod.rs  registry.rs
crates/yoink-server/src/providers/deezer/: mod.rs
crates/yoink-server/src/providers/musicbrainz/: mod.rs
crates/yoink-server/src/providers/soulseek/: matching.rs  mod.rs  models.rs  transfer.rs  util.rs
crates/yoink-server/src/providers/tidal/: api.rs  instances.rs  manifest.rs  mod.rs  models.rs
crates/yoink-server/src/routes/: album.rs  artist.rs  auth.rs  dashboard.rs  helpers.rs  images.rs  import.rs  job.rs  library.rs  match_suggestion.rs  mod.rs  provider.rs  search.rs  tests.rs  track.rs  wanted.rs
crates/yoink-server/src/services/: album.rs  artist.rs  helpers.rs  hifi.rs  library.rs  matching.rs  mod.rs  search.rs  track.rs
crates/yoink-server/src/services/downloads/: io.rs  lyrics.rs  manifest.rs  metadata.rs  mod.rs  worker.rs
crates/yoink-server/src/ui/: assets.rs  mod.rs
crates/yoink-shared/: Cargo.toml
crates/yoink-shared/src/: actions.rs  context.rs  error.rs  helpers.rs  import.rs  lib.rs  models.rs
frontend/: .oxfmtrc.json  .oxlintrc.json  (+5 more)
(+99 files in other folders)
