[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"

[workspace.dependencies]
# ── Shared ───────────────────────────────────────────────────
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
async-trait = "0.1"
thiserror = "2"
argon2 = "0.5"
cookie = "0.18"
rand = "0.9"
sha2 = "0.10"
veil = "0.3"

# ── Server ──────────────────────────────────────────────────
axum = { version = "0.8", features = ["form", "json", "macros"] }
governor = "0.8"
base64 = "0.22"
better-config = { version = "0.2", features = ["env"] }
serial_test = "3"
lrclib-api-rs = "0.3"
lofty = "0.22"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
musicbrainz_rs = { version = "0.12", features = [
  "rate_limit",
  "async",
  "rustls",
], default-features = false }
roxmltree = "0.20"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "sqlite",
  "uuid",
  "chrono",
] }
strsim = "0.11"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "rt-multi-thread",
  "sync",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["normalize-path", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }
utoipa = { version = "5.4.0", features = [
  "axum_extras",
  "chrono",
  "uuid",
  "url",
] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"

# ── Internal crates ─────────────────────────────────────────
yoink-shared = { path = "crates/yoink-shared" }
