[package]
name = "yoink-client"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
yoink-shared = { workspace = true }
yoink-app = { workspace = true, features = ["hydrate"] }

leptos = { workspace = true, features = ["hydrate"] }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
