[package]
name = "yoink-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "yoink-server"

[dependencies]
yoink-shared = { workspace = true, features = ["ssr"] }
yoink-app = { workspace = true, features = ["ssr"] }

async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
envconfig = { workspace = true }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true }
leptos_router = { workspace = true, features = ["ssr"] }
lrclib-api-rs = { workspace = true }
lofty = { workspace = true }
musicbrainz_rs = { workspace = true }
reqwest = { workspace = true }
roxmltree = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
strsim = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
