[package]
name = "yoink-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "yoink-server"

[dependencies]
yoink-shared = { workspace = true, features = ["ssr"] }

async-trait.workspace = true
argon2.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
better-config.workspace = true
cookie.workspace = true
governor.workspace = true
lrclib-api-rs.workspace = true
lofty.workspace = true
musicbrainz_rs.workspace = true
rand.workspace = true
reqwest.workspace = true
roxmltree.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
strsim.workspace = true
uuid.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-scalar.workspace = true
veil.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true

[dev-dependencies]
serial_test = { workspace = true }
tempfile = "3"
