[package]
name = "yoink-shared"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
utoipa.workspace = true

tokio = { workspace = true, optional = true }

[features]
default = []
ssr = ["dep:tokio"]
